--- a/Main_3.0.ipynb
+++ b/Main_3.0.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -22,33 +21,24 @@
     "colab": {
       "name": "Lemonade Empire 3.0.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    }
+      "collapsed_sections": []
+    },
+    "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fmahboub/Lemonade_Empire/blob/master/Main_3.0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
         "id": "aKVunzv67Xos",
         "colab_type": "code",
+        "outputId": "a9f1ce8c-adad-40a4-cfb4-db550458c8c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "62824818-9844-42d9-8a27-1c6fc77a7196"
+          "height": 122
+        }
       },
       "source": [
+        "# Ignore if running locally\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
@@ -57,7 +47,11 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -78,11 +72,12 @@
         "import pandas as pd\n",
         "import csv\n",
         "from datetime import date\n",
+        "from IPython.display import clear_output\n",
         "\n",
         "def mainMenu ():\n",
         "    command = \"\"\n",
         "    while command != \"N\":\n",
-        "        print (\"\\n\"+\"\\n\"+\"\\n\")\n",
+        "        clear_output(wait=True)\n",
         "        print (\"DAY:\"+ str(day)+\"\\nCASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"LOCATIONS:\"+ str(locations)+\"\\nLEMONS:\"+ str(lemons)+\" SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\"kg\"+\n",
         "               \" CUPS:\"+ str(cups))\n",
@@ -110,8 +105,8 @@
         "    command1 = \"\"\n",
         "    global cash\n",
         "    while command1 != \"R\":\n",
-        "        print (\"\")\n",
-        "        print (\"\\n\"+\"\\n\")\n",
+        "        clear_output(wait=True)\n",
+        "        time.sleep(.05)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\"  SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\n",
         "               \"kg\"+ \"  CUPS:\"+ str(cups)+ \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"__________________________\")\n",
@@ -176,8 +171,8 @@
         "                marketingEffect = 0\n",
         "        spaceCount2 = 17 - int(len(str('{:.1f}'.format(marketingEffect))))\n",
         "        spaceCount3 = \".\"*spaceCount2\n",
-        "        print (\"\")\n",
-        "        print (\"\\n\"+\"\\n\")\n",
+        "        clear_output(wait=True)\n",
+        "        time.sleep(.1)\n",
         "        print (\"DAY:\"+ str(day)+\"\\nCASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        if searchEngineCampaignDays > 0:\n",
         "            print (\"SEARCH ENGINE OPTIMIZATION DAYS LEFT: \"+str(searchEngineCampaignDays))\n",
@@ -252,8 +247,8 @@
         "    command11 = \"\"\n",
         "    global cash, lemons\n",
         "    while command11 != \"R\":\n",
-        "        print (\"\")\n",
-        "        print (\"\\n\"+\"\\n\")\n",
+        "        clear_output(wait=True)\n",
+        "        time.sleep(.1)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\"  SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\n",
         "               \"kg\"+ \"  CUPS:\"+ str(cups)+ \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"________________________________________\")\n",
@@ -305,7 +300,8 @@
         "    command12 = \"\"\n",
         "    global cash, sugar \n",
         "    while command12 != \"R\":\n",
-        "        print (\"\\n\"+\"\\n\"+\"\\n\")\n",
+        "        clear_output(wait=True)\n",
+        "        time.sleep(.1)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\"  SUGAR:\"+ str('{:.1f}'.format(round(sugar,2)))+\n",
         "               \"kg\"+ \"  CUPS:\"+ str(cups)+ \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"________________________________________\")\n",
@@ -358,7 +354,8 @@
         "    command13 = \"\"\n",
         "    global cash, cups\n",
         "    while command13 != \"R\":\n",
-        "        print (\"\\n\"+\"\\n\"+\"\\n\")\n",
+        "        clear_output(wait=True)\n",
+        "        time.sleep(.1)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\" SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\n",
         "               \"kg\"+ \" CUPS:\"+ str(cups)+ ' CASH:$' +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"_______________________________________\")\n",
@@ -416,7 +413,8 @@
         "    spaceCount4 = 3 - len(str(loanDays))\n",
         "    space4 = \".\"*spaceCount4\n",
         "    while command14 != \"R\":\n",
-        "        print (\"\\n\"+\"\\n\"+\"\\n\")\n",
+        "        clear_output(wait=True)\n",
+        "        time.sleep(.1)\n",
         "        if cash > maxcash:\n",
         "            maxcash = cash\n",
         "        if (cash + account) > maxcashsav:\n",
@@ -518,8 +516,8 @@
         "    spaceCount5 = 10 - int(len(str('{:.2f}'.format(standPrice))))\n",
         "    space5 = \".\"*spaceCount5\n",
         "    while command15 != \"R\":\n",
-        "        print (\"\")\n",
-        "        print (\"\\n\"+\"\\n\")\n",
+        "        clear_output(wait=True)\n",
+        "        time.sleep(.1)\n",
         "        print (\"LOCATIONS:\"+ str(locations)+ \"  COOLERS:\"+ str(coolers)+\"  CANOPIES:\"+ str(canopies) +\n",
         "                \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"________________________________________\")\n",
@@ -635,7 +633,7 @@
         "            name = (input(\"PLEASE ENTER SHORTER NAME:\")).upper()\n",
         "        else:\n",
         "            name = (input(\"PLEASE ENTER YOUR NAME:\")).upper()\n",
-        "    print (\"\")\n",
+        "    clear_output(wait=True)\n",
         "    print(\"TIME TO BUILD \"+name+\"'S \"+\"LEMONADE EMPIRE!\")\n",
         "    print(\" \")\n",
         "    print(\"________________________________\")\n",
@@ -689,7 +687,7 @@
         "        robbed = random.randint(1,25)\n",
         "        #set up random integer to rain\n",
         "        rain = random.randint(1,15)\n",
-        "        print (\"\")\n",
+        "        clear_output(wait=True)\n",
         "        print(\"\"+\"\\n\")\n",
         "        print(\"SUNRISE.....\\n\")\n",
         "        print(\"         |\")\n",
@@ -797,7 +795,7 @@
         "            maxcash = cash\n",
         "        if (cash + account) > maxcashsav:\n",
         "            maxcashsav = (cash+account)\n",
-        "    print (\"\")\n",
+        "    clear_output()\n",
         "    print (colored(\".....................GAME OVER......................\",'red'))\n",
         "    print (colored(\"...YOUR EMPIRE CAME CRUMBLING DOWN AFTER \"+ str(day)+ \" DAY(S)...\",'red'))\n",
         "    time.sleep(2)\n",
