--- a/Main_3.0.ipynb
+++ b/Main_3.0.ipynb
@@ -21,11 +21,22 @@
     "colab": {
       "name": "Lemonade Empire 3.0.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fmahboub/Lemonade_Empire/blob/master/Main_3.0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -106,7 +117,6 @@
         "    global cash\n",
         "    while command1 != \"R\":\n",
         "        clear_output(wait=True)\n",
-        "        time.sleep(.05)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\"  SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\n",
         "               \"kg\"+ \"  CUPS:\"+ str(cups)+ \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"__________________________\")\n",
@@ -248,7 +258,6 @@
         "    global cash, lemons\n",
         "    while command11 != \"R\":\n",
         "        clear_output(wait=True)\n",
-        "        time.sleep(.1)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\"  SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\n",
         "               \"kg\"+ \"  CUPS:\"+ str(cups)+ \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"________________________________________\")\n",
@@ -301,7 +310,6 @@
         "    global cash, sugar \n",
         "    while command12 != \"R\":\n",
         "        clear_output(wait=True)\n",
-        "        time.sleep(.1)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\"  SUGAR:\"+ str('{:.1f}'.format(round(sugar,2)))+\n",
         "               \"kg\"+ \"  CUPS:\"+ str(cups)+ \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"________________________________________\")\n",
@@ -355,7 +363,6 @@
         "    global cash, cups\n",
         "    while command13 != \"R\":\n",
         "        clear_output(wait=True)\n",
-        "        time.sleep(.1)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\" SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\n",
         "               \"kg\"+ \" CUPS:\"+ str(cups)+ ' CASH:$' +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"_______________________________________\")\n",
@@ -414,7 +421,6 @@
         "    space4 = \".\"*spaceCount4\n",
         "    while command14 != \"R\":\n",
         "        clear_output(wait=True)\n",
-        "        time.sleep(.1)\n",
         "        if cash > maxcash:\n",
         "            maxcash = cash\n",
         "        if (cash + account) > maxcashsav:\n",
@@ -517,7 +523,6 @@
         "    space5 = \".\"*spaceCount5\n",
         "    while command15 != \"R\":\n",
         "        clear_output(wait=True)\n",
-        "        time.sleep(.1)\n",
         "        print (\"LOCATIONS:\"+ str(locations)+ \"  COOLERS:\"+ str(coolers)+\"  CANOPIES:\"+ str(canopies) +\n",
         "                \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"________________________________________\")\n",
