--- a/Main_3.0.ipynb
+++ b/Main_3.0.ipynb
@@ -2,9 +2,17 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "name": "Lemonade_Empire_3_0.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "include_colab_link": true
+    },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -17,14 +25,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.3"
-    },
-    "colab": {
-      "name": "Lemonade Empire 3.0.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -40,8 +41,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aKVunzv67Xos",
         "colab_type": "code",
+        "id": "aKVunzv67Xos",
         "outputId": "a9f1ce8c-adad-40a4-cfb4-db550458c8c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -49,11 +50,12 @@
         }
       },
       "source": [
-        "# Ignore if running locally\n",
+        "# If running locally, ignore code below \n",
+        "# Change file locations for highschore.csv and allgames.csv\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,8 +73,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LUIJwSl16twz",
         "colab_type": "code",
+        "id": "LUIJwSl16twz",
         "colab": {}
       },
       "source": [
@@ -88,7 +90,8 @@
         "def mainMenu ():\n",
         "    command = \"\"\n",
         "    while command != \"N\":\n",
-        "        clear_output(wait=True)\n",
+        "        time.sleep(0.1)\n",
+        "        clear_output(wait=False)\n",
         "        print (\"DAY:\"+ str(day)+\"\\nCASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"LOCATIONS:\"+ str(locations)+\"\\nLEMONS:\"+ str(lemons)+\" SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\"kg\"+\n",
         "               \" CUPS:\"+ str(cups))\n",
@@ -116,7 +119,8 @@
         "    command1 = \"\"\n",
         "    global cash\n",
         "    while command1 != \"R\":\n",
-        "        clear_output(wait=True)\n",
+        "        time.sleep(0.1)\n",
+        "        clear_output(wait=False)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\"  SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\n",
         "               \"kg\"+ \"  CUPS:\"+ str(cups)+ \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"__________________________\")\n",
@@ -181,7 +185,7 @@
         "                marketingEffect = 0\n",
         "        spaceCount2 = 17 - int(len(str('{:.1f}'.format(marketingEffect))))\n",
         "        spaceCount3 = \".\"*spaceCount2\n",
-        "        clear_output(wait=True)\n",
+        "        clear_output(wait=False)\n",
         "        time.sleep(.1)\n",
         "        print (\"DAY:\"+ str(day)+\"\\nCASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        if searchEngineCampaignDays > 0:\n",
@@ -257,7 +261,7 @@
         "    command11 = \"\"\n",
         "    global cash, lemons\n",
         "    while command11 != \"R\":\n",
-        "        clear_output(wait=True)\n",
+        "        clear_output(wait=False)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\"  SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\n",
         "               \"kg\"+ \"  CUPS:\"+ str(cups)+ \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"________________________________________\")\n",
@@ -309,7 +313,7 @@
         "    command12 = \"\"\n",
         "    global cash, sugar \n",
         "    while command12 != \"R\":\n",
-        "        clear_output(wait=True)\n",
+        "        clear_output(wait=False)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\"  SUGAR:\"+ str('{:.1f}'.format(round(sugar,2)))+\n",
         "               \"kg\"+ \"  CUPS:\"+ str(cups)+ \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"________________________________________\")\n",
@@ -362,7 +366,7 @@
         "    command13 = \"\"\n",
         "    global cash, cups\n",
         "    while command13 != \"R\":\n",
-        "        clear_output(wait=True)\n",
+        "        clear_output(wait=False)\n",
         "        print (\"LEMONS:\"+ str(lemons)+\" SUGAR:\"+ str('{:.1f}'.format(round(sugar,1)))+\n",
         "               \"kg\"+ \" CUPS:\"+ str(cups)+ ' CASH:$' +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"_______________________________________\")\n",
@@ -420,7 +424,7 @@
         "    spaceCount4 = 3 - len(str(loanDays))\n",
         "    space4 = \".\"*spaceCount4\n",
         "    while command14 != \"R\":\n",
-        "        clear_output(wait=True)\n",
+        "        clear_output(wait=False)\n",
         "        if cash > maxcash:\n",
         "            maxcash = cash\n",
         "        if (cash + account) > maxcashsav:\n",
@@ -522,7 +526,7 @@
         "    spaceCount5 = 10 - int(len(str('{:.2f}'.format(standPrice))))\n",
         "    space5 = \".\"*spaceCount5\n",
         "    while command15 != \"R\":\n",
-        "        clear_output(wait=True)\n",
+        "        clear_output(wait=False)\n",
         "        print (\"LOCATIONS:\"+ str(locations)+ \"  COOLERS:\"+ str(coolers)+\"  CANOPIES:\"+ str(canopies) +\n",
         "                \"  CASH:$\" +str('{:.2f}'.format(round(cash,2))))\n",
         "        print (\"________________________________________\")\n",
@@ -638,7 +642,7 @@
         "            name = (input(\"PLEASE ENTER SHORTER NAME:\")).upper()\n",
         "        else:\n",
         "            name = (input(\"PLEASE ENTER YOUR NAME:\")).upper()\n",
-        "    clear_output(wait=True)\n",
+        "    clear_output(wait=False)\n",
         "    print(\"TIME TO BUILD \"+name+\"'S \"+\"LEMONADE EMPIRE!\")\n",
         "    print(\" \")\n",
         "    print(\"________________________________\")\n",
@@ -838,7 +842,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XHY-fmUdKFBz",
+        "scrolled": false,
+        "id": "4LKwIcqvzfGa",
         "colab_type": "code",
         "colab": {}
       },
